tests/baselines/reference/parserFunctionDeclaration2.d.errors.txt
==== tests/cases/compiler/parserFunctionDeclaration2.d.ts (1 errors) ====
    function F() {
             ~
!!! parserFunctionDeclaration2.d.ts(1,10): error TS1046: A 'declare' modifier is required for a top level declaration in a .d.ts file.
    }